Last Update... Finally ALL working... remove some things

--- a/roles/Base/tasks/users/koopernic.yml
+++ b/roles/Base/tasks/users/koopernic.yml
@@ -7,7 +7,7 @@
   user:
     name: koopernic
     group: koopernic
-    groups: sudo,vboxusers,ifuse
+    groups: sudo,vboxusers
     state: present
     shell: /bin/zsh
 
