--- a/roles/Base/tasks/system_setup/memory.yml
+++ b/roles/Base/tasks/system_setup/memory.yml
@@ -7,7 +7,7 @@
     line: "vm.swappiness = 1"
   register: swappiness
 
-- name: Apply Swappiness
-  tags: swappiness,sysctl,system,setup
-  command: sysctl vm.swappiness= 1
-  when: swappiness.changed
+#- name: Apply Swappiness
+#  tags: swappiness,sysctl,system,setup
+#  command: sysctl vm.swappiness= 1
+#  when: swappiness.changed
