Updated Ansible Structure
Updated all the files because breaking changes.. segmented by type of machine

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,23 @@
 [defaults]
 inventory = inventory
+interpreter_python=auto
 private_key_file = ~/.ssh/ansible
 remote_user = koopernic
 roles_path = /roles/
 retry_files_enabled = False
+
+[colors]
+changed=yellow
+console_prompt=white
+debug=dark gray
+deprecate=purple
+diff_add=green
+diff_lines=cyan
+diff_remove=red
+error=red
+highlight=white
+ok=green
+skip=cyan
+unreachable=bright red
+verbose=blue
+warn=bright purple
